Improved line wrapping in 2015 and 2016

--- a/input_2015/day19.ipynb
+++ b/input_2015/day19.ipynb
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -101,7 +101,7 @@
        " ['e', 'OMg']]"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -112,96 +112,349 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "3 4\n",
-      "18 22\n",
-      "105 127\n",
-      "607 734\n",
-      "3566 4300\n"
-     ]
-    },
-    {
-     "ename": "KeyboardInterrupt",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-10-6a746476a514>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m     11\u001b[0m             \u001b[0;32mfor\u001b[0m \u001b[0ms\u001b[0m \u001b[0;32min\u001b[0m \u001b[0msubs\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     12\u001b[0m                 \u001b[0mq\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mp\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0mn\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mreplace\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0ms\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0ms\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m1\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 13\u001b[0;31m                 \u001b[0;32mif\u001b[0m \u001b[0mq\u001b[0m \u001b[0;32mnot\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mresults\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     14\u001b[0m                     \u001b[0moptions\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mappend\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mq\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     15\u001b[0m         \u001b[0;32mwhile\u001b[0m \u001b[0mm\u001b[0m \u001b[0;32min\u001b[0m \u001b[0moptions\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
+      "107 506\n",
+      "5684 500\n",
+      "199890 502\n"
      ]
     }
    ],
    "source": [
-    "count = 0\n",
-    "results = [\"e\"]\n",
-    "molecules = [\"e\"]\n",
+    "from multiprocessing import Pool\n",
     "\n",
-    "while a not in results:\n",
+    "count = 0\n",
+    "results = [a]\n",
+    "molecules = [a]\n",
+    "\n",
+    "while \"e\" not in results:\n",
     "    options = []\n",
     "    for m in molecules:\n",
-    "        for x in range(0, len(m)):\n",
-    "            n = m[x:]\n",
-    "            p = m[:x]\n",
-    "            for s in subs:\n",
-    "                q = p + n.replace(s[0], s[1], 1)\n",
-    "                if q not in results:\n",
-    "                    options.append(q)\n",
-    "        while m in options:\n",
-    "            options.remove(m)\n",
+    "        options.extend(next_molecule(m))\n",
+    "#     with Pool() as p:\n",
+    "#         options = p.map(next_molecule, molecules)[0]\n",
     "    count += 1\n",
     "    molecules = list(set(options))\n",
     "    results.extend(molecules)\n",
-    "\n",
-    "    print(len(molecules), len(results))\n"
+    "    \n",
+    "    print(len(molecules), len(results[-1]))\n",
+    "#     print(results)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def next_molecule(molecule):\n",
+    "    options = set()\n",
+    "    for x in range(0, len(molecule)):\n",
+    "        n = molecule[x:]\n",
+    "        p = molecule[:x]\n",
+    "        for s in subs:\n",
+    "            q = p + n.replace(s[1], s[0], 1)\n",
+    "            if len(q) <= len(molecule) and q not in results:\n",
+    "                options.add(q)\n",
+    "    \n",
+    "    options.discard(molecule)\n",
+    "    \n",
+    "    return options"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "121"
+       "{'HH', 'HOe', 'HeH', 'eOH'}"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "while m in results:\n",
-    "    results.remove(m)\n",
-    "len(list(set(results)))"
+    "next_molecule(\"HOH\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'CRnFYSiAlYFArSiRnFArMg'"
+       "6"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "m"
+    "count"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['HOHOHO',\n",
+       " 'HOHOHe',\n",
+       " 'HOeOHO',\n",
+       " 'HOHOH',\n",
+       " 'HeHOHO',\n",
+       " 'HHOHO',\n",
+       " 'HOHHO',\n",
+       " 'HOHOeO',\n",
+       " 'HOHeHO',\n",
+       " 'eOHOHO',\n",
+       " 'eOHHO',\n",
+       " 'HeHOH',\n",
+       " 'HOeOeO',\n",
+       " 'HOHOe',\n",
+       " 'OOHO',\n",
+       " 'eOHOHe',\n",
+       " 'HOeeHO',\n",
+       " 'HeOHO',\n",
+       " 'eOeOHO',\n",
+       " 'HOHeeO',\n",
+       " 'HeHeHO',\n",
+       " 'HeeOHO',\n",
+       " 'HOHH',\n",
+       " 'eeHOHO',\n",
+       " 'HOHeO',\n",
+       " 'HeHOeO',\n",
+       " 'HOHOee',\n",
+       " 'HOeOHe',\n",
+       " 'HOHeHe',\n",
+       " 'HOHeH',\n",
+       " 'HOeHO',\n",
+       " 'HHOeO',\n",
+       " 'HOHHe',\n",
+       " 'eHOHO',\n",
+       " 'HHOHe',\n",
+       " 'HHHO',\n",
+       " 'HOeOH',\n",
+       " 'HOOO',\n",
+       " 'eOHOeO',\n",
+       " 'eOHOH',\n",
+       " 'HeHOHe',\n",
+       " 'HHOH',\n",
+       " 'HHeHO',\n",
+       " 'HeHHO',\n",
+       " 'eOHeHO',\n",
+       " 'HHeO',\n",
+       " 'HeOHe',\n",
+       " 'HOOe',\n",
+       " 'HHeH',\n",
+       " 'eOeHO',\n",
+       " 'eeHOH',\n",
+       " 'eOHOe',\n",
+       " 'HOO',\n",
+       " 'HeHeO',\n",
+       " 'eOHOee',\n",
+       " 'HOeeHe',\n",
+       " 'HeeOHe',\n",
+       " 'eHOHe',\n",
+       " 'HeeOH',\n",
+       " 'eOHeHe',\n",
+       " 'eOHHe',\n",
+       " 'HOeO',\n",
+       " 'HeOO',\n",
+       " 'HOeOe',\n",
+       " 'HeHeH',\n",
+       " 'eOHO',\n",
+       " 'HeHHe',\n",
+       " 'OOeO',\n",
+       " 'eHHO',\n",
+       " 'HeHeeO',\n",
+       " 'OHO',\n",
+       " 'HeHOe',\n",
+       " 'eOeOHe',\n",
+       " 'OeHO',\n",
+       " 'HeOH',\n",
+       " 'HeHeHe',\n",
+       " 'eOHeO',\n",
+       " 'eeHOeO',\n",
+       " 'eOHeeO',\n",
+       " 'eHeHO',\n",
+       " 'eOOO',\n",
+       " 'eOeeHO',\n",
+       " 'HeHO',\n",
+       " 'eOHH',\n",
+       " 'HOeOee',\n",
+       " 'eeHeHO',\n",
+       " 'HHeHe',\n",
+       " 'HOeHe',\n",
+       " 'eHOeO',\n",
+       " 'eeHOHe',\n",
+       " 'HOHee',\n",
+       " 'eOeOeO',\n",
+       " 'HHOe',\n",
+       " 'HeHH',\n",
+       " 'HeeHO',\n",
+       " 'eeHHO',\n",
+       " 'eeOHO',\n",
+       " 'HHeeO',\n",
+       " 'HOeeH',\n",
+       " 'HeeOeO',\n",
+       " 'HOHe',\n",
+       " 'HeHOee',\n",
+       " 'HOHeee',\n",
+       " 'HHH',\n",
+       " 'HeOeO',\n",
+       " 'HOeH',\n",
+       " 'HHOee',\n",
+       " 'eOHeH',\n",
+       " 'HOeeeO',\n",
+       " 'HHHe',\n",
+       " 'HeeeHO',\n",
+       " 'eHOH',\n",
+       " 'HOeeO',\n",
+       " 'OOH',\n",
+       " 'eOeOH',\n",
+       " 'eeeOHO',\n",
+       " 'OOHe',\n",
+       " 'HOee',\n",
+       " 'OeO',\n",
+       " 'HeOe',\n",
+       " 'OH',\n",
+       " 'HeHeee',\n",
+       " 'HeeeeO',\n",
+       " 'eHHe',\n",
+       " 'HeeHe',\n",
+       " 'eOeeO',\n",
+       " 'HHe',\n",
+       " 'eeHeHe',\n",
+       " 'OeeO',\n",
+       " 'eeHOe',\n",
+       " 'eHOee',\n",
+       " 'eOeH',\n",
+       " 'eeeHO',\n",
+       " 'eOeeHe',\n",
+       " 'eeeOHe',\n",
+       " 'eOeOe',\n",
+       " 'eOeeH',\n",
+       " 'eeOO',\n",
+       " 'eOH',\n",
+       " 'OOe',\n",
+       " 'eHO',\n",
+       " 'eeHOee',\n",
+       " 'eOeeeO',\n",
+       " 'HeeOee',\n",
+       " 'eOHeee',\n",
+       " 'eHeO',\n",
+       " 'eeOHe',\n",
+       " 'eOeHe',\n",
+       " 'eOO',\n",
+       " 'HeHee',\n",
+       " 'eOeO',\n",
+       " 'HOeee',\n",
+       " 'eeHHe',\n",
+       " 'eHeH',\n",
+       " 'HeeeO',\n",
+       " 'HeeO',\n",
+       " 'eeHO',\n",
+       " 'OHe',\n",
+       " 'eeOH',\n",
+       " 'eHeeO',\n",
+       " 'HeeH',\n",
+       " 'HeeeHe',\n",
+       " 'eOHee',\n",
+       " 'eeeeHO',\n",
+       " 'eeeOeO',\n",
+       " 'HeOee',\n",
+       " 'eOOe',\n",
+       " 'HeeOe',\n",
+       " 'HHeee',\n",
+       " 'HOe',\n",
+       " 'eeHH',\n",
+       " 'HeO',\n",
+       " 'eHOe',\n",
+       " 'eHH',\n",
+       " 'HeH',\n",
+       " 'HO',\n",
+       " 'OOee',\n",
+       " 'OeH',\n",
+       " 'eeHeO',\n",
+       " 'HOeeee',\n",
+       " 'eeHeeO',\n",
+       " 'eHeHe',\n",
+       " 'eeHeH',\n",
+       " 'OeHe',\n",
+       " 'HeeeH',\n",
+       " 'eOHe',\n",
+       " 'eeOeO',\n",
+       " 'eeeOH',\n",
+       " 'HeHe',\n",
+       " 'eOeOee',\n",
+       " 'HHee',\n",
+       " 'eeHe',\n",
+       " 'eeHeee',\n",
+       " 'eeeHe',\n",
+       " 'eeeeHe',\n",
+       " 'eeHee',\n",
+       " 'eOeee',\n",
+       " 'Oeee',\n",
+       " 'eHee',\n",
+       " 'eO',\n",
+       " 'eeeeO',\n",
+       " 'eH',\n",
+       " 'eHeee',\n",
+       " 'eOeeee',\n",
+       " 'eOee',\n",
+       " 'eeH',\n",
+       " 'Hee',\n",
+       " 'H',\n",
+       " 'eeOe',\n",
+       " 'eHe',\n",
+       " 'Oee',\n",
+       " 'Oe',\n",
+       " 'eeO',\n",
+       " 'eOe',\n",
+       " 'eeOee',\n",
+       " 'Heeee',\n",
+       " 'eeeOe',\n",
+       " 'eeeeeO',\n",
+       " 'eeeeH',\n",
+       " 'eeeOee',\n",
+       " 'eeeH',\n",
+       " 'eeeO',\n",
+       " 'He',\n",
+       " 'Heeeee',\n",
+       " 'Heee',\n",
+       " 'eeeeee',\n",
+       " 'eee',\n",
+       " 'ee',\n",
+       " 'eeee',\n",
+       " 'e',\n",
+       " 'eeeee']"
+      ]
+     },
+     "execution_count": 33,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "results"
    ]
   },
   {
