cleaning up input_2016/day19.ipynb to show off

--- a/input_2016/day19.ipynb
+++ b/input_2016/day19.ipynb
@@ -25,6 +25,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Part 1: Imagine a circle of elves, numbered from 1, each holding a gift.\n",
+    "# Going around the circle in order, each elf steals a gift from the elf on\n",
+    "# their left. Any elf without a gift is removed from the circle. Which elf\n",
+    "# ends up with all the gifts?\n",
+    "\n",
+    "# Solution: First I solved this problem by walking the list, which was\n",
+    "# prohibitively slow for large n\n",
     "def part1a(x):\n",
     "    p1 = {}\n",
     "    elves = list(range(x))\n",
@@ -37,11 +44,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# part1: 2^n = 1, then follow 2^n odd numbers (so the last is 2^n+1 - 1 : 2^n+1 - 1)\n",
+    "# I tried speeding up execution with threading or multiprocessing, but\n",
+    "# concluded that the computation is CPU-bound and modifies a single massive\n",
+    "# data structure - I would have to chunk it manually. Along the way, I ran\n",
+    "# the above code for n from 2 to 50. Noticing a pattern in the output, I\n",
+    "# derived a formula for both results.\n",
+    "    \n",
+    "# part1: 2^n => 1, then follow 2^n odd numbers (so the last is 2^n+1 - 1 => 2^n+1 - 1)\n",
+    "\n",
     "def part1b(x):\n",
     "    powers = [2**n for n in range(25)]\n",
     "    odds = [1 + 2*n for n in range(x)]\n",
@@ -55,8 +69,66 @@
    "cell_type": "code",
    "execution_count": 5,
    "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "with mp.Pool() as pool:\n",
+    "    a = pool.map(part1a, size)\n",
+    "    b = pool.map(part1b, size)\n",
+    "a == b"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "CPU times: user 475 ms, sys: 70.6 ms, total: 546 ms\n",
+      "Wall time: 577 ms\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "{3001330: 1808357}"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "%%time\n",
+    "part1b(3001330)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
    "outputs": [],
    "source": [
+    "# Part 2: Imagine instead that the elves steal gifts from the elf directly\n",
+    "# across the circle from them, or the elf on the left (from the stealer's\n",
+    "# view) if there are two options. Now which elf ends up with all the gifts?\n",
+    "\n",
+    "# Solution: Again, this code was technically correct but incredibly slow; it would've run for 24+ hrs on the problem input.\n",
+    "\n",
     "def part2a(x):\n",
     "    p2 = {}\n",
     "    elves = list(range(x))\n",
@@ -66,19 +138,20 @@
     "            if r in elves:\n",
     "                j = elves.index(r)\n",
     "                elves.pop((j + math.floor(len(elves) / 2)) % len(elves))\n",
-    "                if r == elves[j - 2]:\n",
-    "                    break\n",
     "    p2[x] = elves[0] + 1\n",
+    "    \n",
     "    return p2"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# part2: 1 : 1, if n : n then start 1, 2, 3 until n : n/2, then continue sequence of odds until n : n\n",
+    "# part2: 1 => 1, if n => n then start 1, 2, 3 until n => n/2, then continue sequence of odds until n => n\n",
+    "\n",
+    "# This still takes a while to run\n",
     "def part2b(x):\n",
     "    p2 = {}\n",
     "    odds = [1 + 2*n for n in range(x)]\n",
@@ -99,7 +172,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -127,78 +200,72 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "CPU times: user 186 ms, sys: 190 ms, total: 377 ms\n",
-      "Wall time: 1.49 s\n"
-     ]
-    },
     {
      "data": {
       "text/plain": [
        "True"
       ]
      },
-     "execution_count": 46,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "%%time\n",
     "with mp.Pool() as pool:\n",
     "    a = pool.map(part2a, size)\n",
-    "    b = pool.map(part2c, size)\n",
-    "a == b\n",
-    "# print(a)\n",
-    "# print(b)"
+    "    b = pool.map(part2b, size)\n",
+    "    c = pool.map(part2c, size)\n",
+    "\n",
+    "a == b and b == c"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 398 ms, sys: 74 ms, total: 472 ms\n",
-      "Wall time: 502 ms\n"
+      "CPU times: user 16min 13s, sys: 4.5 s, total: 16min 17s\n",
+      "Wall time: 17min 42s\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "{3001330: 1808357}"
+       "{300000: 122853}"
       ]
      },
-     "execution_count": 48,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "%%time\n",
-    "part1b(3001330)"
+    "# part2a(300) -> 3ms\n",
+    "# part2a(3000) -> 166ms\n",
+    "# part2a(30000) -> 15s\n",
+    "# part2a(300000) -> 18min"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 40min 59s, sys: 15.1 s, total: 41min 14s\n",
-      "Wall time: 44min 13s\n"
+      "CPU times: user 42min 24s, sys: 12.2 s, total: 42min 36s\n",
+      "Wall time: 1h 1min\n"
      ]
     },
     {
@@ -207,7 +274,7 @@
        "{3001330: 1407007}"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -219,15 +286,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 382 ms, sys: 69.5 ms, total: 452 ms\n",
-      "Wall time: 458 ms\n"
+      "CPU times: user 521 ms, sys: 77.8 ms, total: 599 ms\n",
+      "Wall time: 1.09 s\n"
      ]
     },
     {
@@ -236,7 +303,7 @@
        "{3001330: 1407007}"
       ]
      },
-     "execution_count": 47,
+     "execution_count": 43,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -270,7 +337,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.9"
+   "version": "3.6.12"
   }
  },
  "nbformat": 4,
