--- a/input_2016/day19.ipynb
+++ b/input_2016/day19.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -119,7 +119,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -145,7 +145,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -172,10 +172,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
+    "# By inspection, the values of n where n -> n are powers of 3.\n",
     "def part2c(x):\n",
     "    odds = [1 + 2*n for n in range(x)]\n",
     "    \n",
@@ -184,12 +185,15 @@
     "            a = r - 1\n",
     "            break\n",
     "    \n",
+    "    # Find the power of 3 below x, its difference with x, and its difference with the next power of 3\n",
     "    p = 3**a\n",
     "    r = x - p\n",
     "    d = 3**(a+1) - p\n",
     "    \n",
+    "    # if the remainder is less than half the distance to the next power of 3, y is r\n",
     "    if r <= d//2:\n",
     "        y = r\n",
+    "    # otherwise pick y out of the sequence of odds\n",
     "    else:\n",
     "        s = r - d//2\n",
     "        i = odds.index(p)\n",
@@ -200,16 +204,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[{2: 1}, {3: 3}, {4: 1}, {5: 2}, {6: 3}, {7: 5}, {8: 7}, {9: 9}, {10: 1}, {11: 2}, {12: 3}, {13: 4}, {14: 5}, {15: 6}, {16: 7}, {17: 8}, {18: 9}, {19: 11}, {20: 13}, {21: 15}, {22: 17}, {23: 19}, {24: 21}, {25: 23}, {26: 25}, {27: 27}, {28: 1}, {29: 2}, {30: 3}, {31: 4}, {32: 5}, {33: 6}, {34: 7}, {35: 8}, {36: 9}, {37: 10}, {38: 11}, {39: 12}, {40: 13}, {41: 14}, {42: 15}, {43: 16}, {44: 17}, {45: 18}, {46: 19}, {47: 20}, {48: 21}, {49: 22}]\n"
+     ]
+    },
     {
      "data": {
       "text/plain": [
        "True"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -219,6 +230,7 @@
     "    a = pool.map(part2a, size)\n",
     "    b = pool.map(part2b, size)\n",
     "    c = pool.map(part2c, size)\n",
+    "    print(c)\n",
     "\n",
     "a == b and b == c"
    ]
