--- a/input_2015/day24.ipynb
+++ b/input_2015/day24.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,7 +15,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import functools\n",
+    "\n",
+    "def product(i):\n",
+    "    return functools.reduce(lambda x, y: x*y, i, 1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,53 +35,87 @@
     "# - the first group needs the fewest packages\n",
     "# - to break a tie, calculate the product of the weights of the first group\n",
     "\n",
-    "weights= [1, 2, 3, 4, 5, 7, 8, 9, 10, 11]\n",
-    "# weights = list(map(int, input(\"day24.txt\")))\n",
-    "# weights = [6, 31, 59, 109, 143, 187, 223, 269, 311, 222]"
+    "# weights= [1, 2, 3, 4, 5, 7, 8, 9, 10, 11]\n",
+    "\n",
+    "# 10, 5, 3, 2 => 300\n",
+    "# 10, 8, 2 => 160\n",
+    "weights = list(map(int, input(\"day24.txt\")))\n",
+    "target = sum(weights) // 4"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import itertools\n",
-    "# perms = list(itertools.permutations(weights))\n",
-    "divisions = []\n",
-    "for i in range(1, len(weights) + 1):\n",
-    "    for j in range(1, len(weights) - i):\n",
-    "#         k = len(weights) - i - j\n",
-    "        divisions.append([i, j])\n",
-    "balanced = []\n",
-    "for d in divisions:\n",
-    "    perms = itertools.permutations(weights)\n",
-    "#     print(d)\n",
-    "    for p in perms:\n",
-    "        g1 = sorted(weights[:d[0]])\n",
-    "        g2 = sorted(weights[d[0]:d[0]+d[1]])\n",
-    "        g3 = sorted(weights[d[0]+d[1]:])\n",
-    "        if [g1, g2, g3] not in balanced and sum(g1) == sum(g2) and sum(g2) == sum(g3):\n",
-    "            balanced.append([g1, g2, g3])"
+    "results = []\n",
+    "for n in weights[::-1]:\n",
+    "    first = [n]\n",
+    "    while sum(first) < target:\n",
+    "        w = [x for x in weights if x not in first]\n",
+    "        remainder = target - sum(first)\n",
+    "        if remainder in w:\n",
+    "            first.append(remainder)\n",
+    "        else:\n",
+    "            less_than = [x for x in w if x < remainder]\n",
+    "            if less_than:\n",
+    "                first.append(max(less_than))\n",
+    "            else:\n",
+    "                break\n",
+    "    if sum(first) == target:\n",
+    "        results.append(first)\n",
+    "\n",
+    "\n",
+    "# first = []\n",
+    "\n",
+    "# for n in weights[::-1]:\n",
+    "#     results = [[n]]\n",
+    "#     w = [x for x in weights if x != n]\n",
+    "#     for r in results:\n",
+    "#         while sum(r) < target:\n",
+    "#             remainder = target - sum(r)\n",
+    "#             if remainder in w:\n",
+    "#                 r.append(remainder)\n",
+    "#             else:\n",
+    "#                 less_than = [x for x in w if x < remainder]\n",
+    "#                 r.append(max(less_than))\n",
+    "#     first.append(results)\n",
+    "            \n",
+    "        \n",
+    "#         r = target - n\n",
+    "#         w = [x for x in weights if x != n]\n",
+    "#         if r in w:\n",
+    "#             first.append([n, r])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
-    "compact = [b for b in balanced if len(b[0]) == len(balanced[0][0])]"
+    "s = sorted(sorted(results, key=lambda x: len(x)), key=lambda r: product(r))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "80393059"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "import functools\n",
-    "sorted(compact, key=lambda b: functools.reduce(lambda x, y: x*y, b[0]))"
+    "product(s[0])"
    ]
   }
  ],
@@ -89,7 +135,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.12"
+   "version": "3.9.21"
   }
  },
  "nbformat": 4,
