--- a/input_2020/scratchpad.py.ipynb
+++ b/input_2020/scratchpad.py.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,216 +15,361 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 81,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# rules = input(\"day7.txt\")\n",
-    "rules = [\"light red bags contain 1 bright white bag, 2 muted yellow bags.\",\n",
-    "        \"dark orange bags contain 3 bright white bags, 4 muted yellow bags.\",\n",
-    "\"bright white bags contain 1 shiny gold bag.\",\n",
-    "\"muted yellow bags contain 2 shiny gold bags, 9 faded blue bags.\",\n",
-    "\"shiny gold bags contain 1 dark olive bag, 2 vibrant plum bags.\",\n",
-    "\"dark olive bags contain 3 faded blue bags, 4 dotted black bags.\",\n",
-    "\"vibrant plum bags contain 5 faded blue bags, 6 dotted black bags.\",\n",
-    "\"faded blue bags contain no other bags.\",\n",
-    "\"dotted black bags contain no other bags.\"]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['light red bags contain 1 bright white bag, 2 muted yellow bags.',\n",
-       " 'dark orange bags contain 3 bright white bags, 4 muted yellow bags.',\n",
-       " 'bright white bags contain 1 shiny gold bag.',\n",
-       " 'muted yellow bags contain 2 shiny gold bags, 9 faded blue bags.',\n",
-       " 'shiny gold bags contain 1 dark olive bag, 2 vibrant plum bags.',\n",
-       " 'dark olive bags contain 3 faded blue bags, 4 dotted black bags.',\n",
-       " 'vibrant plum bags contain 5 faded blue bags, 6 dotted black bags.',\n",
-       " 'faded blue bags contain no other bags.',\n",
-       " 'dotted black bags contain no other bags.']"
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "rules"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "152"
-      ]
-     },
-     "execution_count": 7,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "bags = [\"shiny gold\"]\n",
+    "# start = [\".#.\",\n",
+    "# \"..#\",\n",
+    "# \"###\"]\n",
     "\n",
-    "for b in bags:\n",
-    "    for r in rules:\n",
-    "        outer, inner = r.split(\" contain \")\n",
-    "        outer = outer.rstrip(\" bags\")\n",
-    "        if b in inner and outer not in bags:\n",
-    "            bags.append(outer)\n",
-    "len(bags)"
+    "start = [\"##.#####\",\n",
+    "\"#.##..#.\",\n",
+    "\".##...##\",\n",
+    "\"###.#...\",\n",
+    "\".#######\",\n",
+    "\"##....##\",\n",
+    "\"###.###.\",\n",
+    "\".#.#.#..\"]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "parsed = {}\n",
-    "for r in rules:\n",
-    "    outer, inner = r.split(\" contain \")\n",
-    "    b = inner.split(\", \")\n",
-    "    items = {}\n",
-    "    for i in b:\n",
-    "        t = i.split(\" \")\n",
-    "        if not t[0].isdecimal():\n",
-    "            items[0] = 0\n",
-    "        else:\n",
-    "            items[\" \".join(t[1:3])] = int(t[0])\n",
-    "    parsed[\" \".join(outer.split(\" \")[0:2])] = items"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 82,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "True"
+       "{0: {0: {0: '#', 1: '#', 2: '.', 3: '#', 4: '#', 5: '#', 6: '#', 7: '#'},\n",
+       "  1: {0: '#', 1: '.', 2: '#', 3: '#', 4: '.', 5: '.', 6: '#', 7: '.'},\n",
+       "  2: {0: '.', 1: '#', 2: '#', 3: '.', 4: '.', 5: '.', 6: '#', 7: '#'},\n",
+       "  3: {0: '#', 1: '#', 2: '#', 3: '.', 4: '#', 5: '.', 6: '.', 7: '.'},\n",
+       "  4: {0: '.', 1: '#', 2: '#', 3: '#', 4: '#', 5: '#', 6: '#', 7: '#'},\n",
+       "  5: {0: '#', 1: '#', 2: '.', 3: '.', 4: '.', 5: '.', 6: '#', 7: '#'},\n",
+       "  6: {0: '#', 1: '#', 2: '#', 3: '.', 4: '#', 5: '#', 6: '#', 7: '.'},\n",
+       "  7: {0: '.', 1: '#', 2: '.', 3: '#', 4: '.', 5: '#', 6: '.', 7: '.'}}}"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 82,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "list(parsed['faded blue'].keys()) == [0]"
+    "conway = {0: {i: {j: char for j, char in enumerate(row)} for i, row in enumerate(start)}}\n",
+    "conway    "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 83,
    "metadata": {},
    "outputs": [],
    "source": [
-    "bags = [\"shiny gold\"]\n",
-    "s = 0\n",
-    "def bag_count(bag):\n",
-    "    global s\n",
-    "    if list(parsed[bag].keys()) == [0]:\n",
-    "        print(bag, 1)\n",
-    "        return 1\n",
-    "    else:\n",
-    "        for k, v in parsed[bag].items():\n",
-    "            print(k, v)\n",
-    "            s += v * bag_count(k)"
+    "conway = {}\n",
+    "a = []\n",
+    "for row in start:\n",
+    "    a.append(list(row))\n",
+    "\n",
+    "conway[0] = a"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 84,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def neighbours(xyz):\n",
+    "    results = []\n",
+    "    x, y, z = xyz\n",
+    "    for c in [z-1, z, z+1]:\n",
+    "        for b in [y-1, y, y+1]:\n",
+    "            for a in [x-1, x, x+1]:\n",
+    "                results.append((a, b, c))\n",
+    "    \n",
+    "    results.remove(xyz)\n",
+    "    return results"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 85,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def retrieve(xyz):\n",
+    "    x, y, z = xyz\n",
+    "    if z not in conway:\n",
+    "        return \".\"\n",
+    "    if y < 0 or y > len(conway[z]) - 1:\n",
+    "        return \".\"\n",
+    "    if x < 0 or x > len(conway[z][y]) - 1:\n",
+    "        return \".\"\n",
+    "    return conway[z][y][x]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 86,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def augment(d):\n",
+    "    diameter = len(d[0])\n",
+    "    for k, v in d.items():\n",
+    "        new_slice = [[\".\" for x in range(diameter+2)]]\n",
+    "        for row in v:\n",
+    "            new_slice.append([\".\"] + row + [\".\"])\n",
+    "        new_slice.append([\".\" for x in range(diameter+2)])\n",
+    "        d[k] = new_slice\n",
+    "    min_key = min(d.keys())\n",
+    "    d[min_key-1] = [[\".\" for x in range(diameter+2)] for y in range(diameter+2)]\n",
+    "    d[-(min_key-1)] = [[\".\" for x in range(diameter+2)] for y in range(diameter+2)]\n",
+    "    \n",
+    "    return d"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 87,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import copy\n",
+    "\n",
+    "for turn in range(6):\n",
+    "#     print(conway)\n",
+    "    augment(conway)\n",
+    "    new_conway = copy.deepcopy(conway)\n",
+    "    \n",
+    "    for z in new_conway:\n",
+    "        for y in range(len(new_conway[z])):\n",
+    "            for x in range(len(new_conway[z][y])):\n",
+    "                loc = (x, y, z)\n",
+    "                count_on = 0\n",
+    "                for n in neighbours(loc):\n",
+    "                    if retrieve(n) == \"#\":\n",
+    "                        count_on += 1\n",
+    "                if retrieve(loc) == \"#\":\n",
+    "                    if count_on in [2, 3]:\n",
+    "                        new_conway[z][y][x] = \"#\"\n",
+    "                    else:\n",
+    "                        new_conway[z][y][x] = \".\"\n",
+    "                else:\n",
+    "                    if count_on == 3:\n",
+    "                        new_conway[z][y][x] = \"#\"\n",
+    "                    else:\n",
+    "                        new_conway[z][y][x] = \".\"\n",
+    "    \n",
+    "    conway = copy.deepcopy(new_conway)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 88,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "count = 0\n",
+    "for z in conway.values():\n",
+    "    for row in z:\n",
+    "        count += row.count(\"#\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 89,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "310"
+      ]
+     },
+     "execution_count": 89,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "count"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 95,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "expr = \"1 + 2 * 3 + 4 * 5 + 6\"\n",
+    "def stackize(expr):\n",
+    "    tokens = list(expr)\n",
+    "    stack = []\n",
+    "    for char in tokens:\n",
+    "        if char.isdigit():\n",
+    "            stack.append(int(char))\n",
+    "        if char in \"+*()\":\n",
+    "            stack.append(char)\n",
+    "    return stack"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 96,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[1, '+', 2, '*', 3, '+', 4, '*', 5, '+', 6]"
+      ]
+     },
+     "execution_count": 96,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "stackize(expr)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 97,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def ev(stack):\n",
+    "    if len(stack) == 1:\n",
+    "        return stack\n",
+    "    else:\n",
+    "        reduce = []\n",
+    "        for i, char in enumerate(stack):\n",
+    "            if char == \"+\":\n",
+    "                reduce.append(stack[i-1] + stack[i+1])\n",
+    "                reduce.extend(stack[i+2:])\n",
+    "                break\n",
+    "            if char == \"*\":\n",
+    "                reduce.append(stack[i-1] * stack[i+1])\n",
+    "                reduce.extend(stack[i+2:])\n",
+    "                break\n",
+    "            if char == \")\":\n",
+    "                \n",
+    "    \n",
+    "        return ev(reduce)\n",
+    "        "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 98,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[71]"
+      ]
+     },
+     "execution_count": 98,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ev(stackize(expr))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 147,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "day19 = [\"0: 1 2\",\n",
+    "'1: \"a\"',\n",
+    "\"2: 1 3 | 3 1\",\n",
+    "'3: \"b\"']\n",
+    "\n",
+    "rules = {}\n",
+    "for rule in day19:\n",
+    "    num, body = rule.split(\": \")\n",
+    "    rules[num] = body.strip('\"')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 148,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "letters = {\" \": \"\"}\n",
+    "def pop_letters():\n",
+    "    for k, v in rules.items():\n",
+    "        if v.isalpha():\n",
+    "            letters[k] = v"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 149,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pop_letters()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 150,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "dark olive 1\n",
-      "faded blue 3\n",
-      "faded blue 1\n",
-      "dotted black 4\n",
-      "dotted black 1\n"
-     ]
-    },
-    {
-     "ename": "TypeError",
-     "evalue": "unsupported operand type(s) for *: 'int' and 'NoneType'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-43-08eb39ffdd88>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mbag_count\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mbags\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;32m<ipython-input-42-1f597fd05d09>\u001b[0m in \u001b[0;36mbag_count\u001b[0;34m(bag)\u001b[0m\n\u001b[1;32m      9\u001b[0m         \u001b[0;32mfor\u001b[0m \u001b[0mk\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mv\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mparsed\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mbag\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mitems\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     10\u001b[0m             \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mk\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mv\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 11\u001b[0;31m             \u001b[0ms\u001b[0m \u001b[0;34m+=\u001b[0m \u001b[0mv\u001b[0m \u001b[0;34m*\u001b[0m \u001b[0mbag_count\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mk\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0m: unsupported operand type(s) for *: 'int' and 'NoneType'"
+      "['1 3 ', ' 3 1']\n"
      ]
     }
    ],
    "source": [
-    "bag_count(bags[0])"
+    "for k, v in rules.items():\n",
+    "    referrals = set(v)\n",
+    "    if \"|\" in referrals:\n",
+    "        referrals.remove(\"|\")\n",
+    "    if referrals == set(letters.keys()):\n",
+    "        translated = v.split(\"|\")\n",
+    "        print(translated)\n",
+    "        for i, t in enumerate(translated):\n",
+    "            new_string = ''\n",
+    "            for char in t:\n",
+    "                new_string += letters[char]\n",
+    "            translated[i] = new_string\n",
+    "        letters[k] = \"|\".join(translated)\n",
+    "        "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 151,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'light red': {'bright white': 1, 'muted yellow': 2},\n",
-       " 'dark orange': {'bright white': 3, 'muted yellow': 4},\n",
-       " 'bright white': {'shiny gold': 1},\n",
-       " 'muted yellow': {'shiny gold': 2, 'faded blue': 9},\n",
-       " 'shiny gold': {'dark olive': 1, 'vibrant plum': 2},\n",
-       " 'dark olive': {'faded blue': 3, 'dotted black': 4},\n",
-       " 'vibrant plum': {'faded blue': 5, 'dotted black': 6},\n",
-       " 'faded blue': {0: 0},\n",
-       " 'dotted black': {0: 0}}"
+       "{' ': '', '1': 'a', '3': 'b', '2': 'ab|ba'}"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 151,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "parsed"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 44,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "7"
-      ]
-     },
-     "execution_count": 44,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "s"
+    "letters"
    ]
   },
   {
@@ -251,7 +396,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.12"
+   "version": "3.6.13"
   }
  },
  "nbformat": 4,
